# MyTemplateCppProject

./: .gitignore  CMakeLists.txt  main.cpp
include/: common_includes.hpp
src/: CMakeLists.txt
